--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: NormativeNeuroDev_CrossSec_DWI
+name: neurodev_cs_predictive
 channels:
   - defaults
 dependencies:
@@ -122,5 +122,5 @@ dependencies:
     - wrapt==1.12.0
     - xarray==0.15.0
     - zipp==3.0.0
-prefix: /Users/lindenmp/opt/anaconda3/envs/NormativeNeuroDev_CrossSec_DWI
+prefix: /Users/lindenmp/opt/anaconda3/envs/neurodev_cs_predictive
 
