--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 appnope==0.1.0
+apptools==4.5.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.3
 certifi==2019.11.28
 chardet==3.0.4
+configobj==5.0.6
 cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+envisage==4.9.2
+future==0.18.2
 glob3==0.0.1
 idna==2.9
 importlib-metadata==1.5.0
@@ -33,6 +37,7 @@ littleutils==0.2.2
 lxml==4.5.0
 MarkupSafe==1.1.1
 matplotlib==3.2.1
+mayavi==4.7.1
 mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
@@ -48,13 +53,20 @@ patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
 pingouin==0.3.3
+progressbar2==3.50.1
 prometheus-client==0.7.1
 prompt-toolkit==3.0.4
 ptyprocess==0.6.0
+pyface==6.1.2
+pygam==0.8.0
 Pygments==2.6.1
 pyparsing==2.4.6
+PyQt5==5.14.1
+PyQt5-sip==12.7.1
 pyrsistent==0.16.0
+pysurfer==0.10.0
 python-dateutil==2.8.1
+python-utils==2.4.0
 pytz==2019.3
 PyYAML==5.3.1
 pyzmq==19.0.0
@@ -70,7 +82,10 @@ terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
 traitlets==4.3.3
+traits==6.0.0
+traitsui==6.1.3
 urllib3==1.25.8
+vtk==8.1.2
 wcwidth==0.1.9
 webencodings==0.5.1
 xarray==0.15.1
