--- a/environment.yml
+++ b/environment.yml
@@ -25,6 +25,7 @@ dependencies:
     - attrs==19.3.0
     - backcall==0.1.0
     - bleach==3.1.3
+    - brainspace==0.1.1
     - chardet==3.0.4
     - configobj==5.0.6
     - cycler==0.10.0
@@ -63,6 +64,7 @@ dependencies:
     - nbconvert==5.6.1
     - nbformat==5.0.4
     - nibabel==3.0.2
+    - nilearn==0.6.2
     - notebook==6.0.3
     - numpy==1.18.2
     - outdated==0.2.0
@@ -73,6 +75,7 @@ dependencies:
     - patsy==0.5.1
     - pexpect==4.8.0
     - pickleshare==0.7.5
+    - pillow==7.1.2
     - pingouin==0.3.3
     - progressbar2==3.50.1
     - prometheus-client==0.7.1
