--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ apptools==4.5.0
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.3
+brainspace==0.1.1
 certifi==2019.11.28
 chardet==3.0.4
 configobj==5.0.6
@@ -42,6 +43,7 @@ mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
 nibabel==3.0.2
+nilearn==0.6.2
 notebook==6.0.3
 numpy==1.18.2
 outdated==0.2.0
@@ -52,6 +54,7 @@ parso==0.6.2
 patsy==0.5.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.1.2
 pingouin==0.3.3
 progressbar2==3.50.1
 prometheus-client==0.7.1
