--- a/requirements.txt
+++ b/requirements.txt
@@ -78,12 +78,14 @@ scikit-learn==0.22.2.post1
 scipy==1.4.1
 seaborn==0.10.0
 Send2Trash==1.5.0
+shap==0.35.0
 six==1.14.0
 sklearn==0.0
 statsmodels==0.11.1
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
+tqdm==4.46.1
 traitlets==4.3.3
 traits==6.0.0
 traitsui==6.1.3
