--- a/environment.yml
+++ b/environment.yml
@@ -40,6 +40,7 @@ dependencies:
     - ipykernel==5.2.0
     - ipython==7.13.0
     - ipython-genutils==0.2.0
+    - ipywidgets==7.5.1
     - jedi==0.16.0
     - jinja2==2.11.1
     - joblib==0.14.1
@@ -114,6 +115,7 @@ dependencies:
     - vtk==8.1.2
     - wcwidth==0.1.9
     - webencodings==0.5.1
+    - widgetsnbextension==3.5.1
     - xarray==0.15.1
     - zipp==3.1.0
 prefix: /Users/lindenmp/opt/anaconda3/envs/neurodev_cs_predictive
