--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ importlib-metadata==1.5.0
 ipykernel==5.2.0
 ipython==7.13.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
 jedi==0.16.0
 Jinja2==2.11.1
 joblib==0.14.1
@@ -93,5 +94,6 @@ urllib3==1.25.8
 vtk==8.1.2
 wcwidth==0.1.9
 webencodings==0.5.1
+widgetsnbextension==3.5.1
 xarray==0.15.1
 zipp==3.1.0
