--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,7 @@ dependencies:
     - argon2-cffi==20.1.0
     - attrs==20.1.0
     - backcall==0.2.0
+    - bctpy==0.5.2
     - bleach==3.1.5
     - brainspace==0.1.1
     - cffi==1.14.2
