--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ apptools==4.5.0
 argon2-cffi==20.1.0
 attrs==20.1.0
 backcall==0.2.0
+bctpy==0.5.2
 bleach==3.1.5
 brainspace==0.1.1
 certifi==2020.6.20
