--- a/environment.yml
+++ b/environment.yml
@@ -112,6 +112,7 @@ dependencies:
     - testpath==0.4.4
     - threadpoolctl==2.1.0
     - tornado==6.0.4
+    - tqdm==4.53.0
     - traitlets==4.3.3
     - traits==6.1.1
     - traitsui==7.0.1
