--- a/requirements.txt
+++ b/requirements.txt
@@ -92,6 +92,7 @@ terminado==0.8.3
 testpath==0.4.4
 threadpoolctl==2.1.0
 tornado==6.0.4
+tqdm==4.53.0
 traitlets==4.3.3
 traits==6.1.1
 traitsui==7.0.1
