--- a/environment.yml
+++ b/environment.yml
@@ -66,6 +66,7 @@ dependencies:
     - mistune==0.8.4
     - nbconvert==5.6.1
     - nbformat==5.0.7
+    - networkx==2.5
     - nibabel==3.1.1
     - nilearn==0.6.2
     - notebook==6.1.3
