--- a/environment.yml
+++ b/environment.yml
@@ -59,6 +59,7 @@ dependencies:
     - jupyterlab-server==1.2.0
     - kiwisolver==1.2.0
     - littleutils==0.2.2
+    - llvmlite==0.35.0
     - lxml==4.5.2
     - markupsafe==1.1.1
     - matplotlib==3.3.1
@@ -70,6 +71,7 @@ dependencies:
     - nibabel==3.1.1
     - nilearn==0.6.2
     - notebook==6.1.3
+    - numba==0.52.0
     - numpy==1.19.1
     - outdated==0.2.0
     - packaging==20.4
@@ -105,8 +107,10 @@ dependencies:
     - scipy==1.5.2
     - seaborn==0.10.1
     - send2trash==1.5.0
+    - shap==0.37.0
     - six==1.15.0
     - sklearn==0.0
+    - slicer==0.0.3
     - statsmodels==0.12.0
     - tabulate==0.8.7
     - terminado==0.8.3
