--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ jupyterlab==2.2.6
 jupyterlab-server==1.2.0
 kiwisolver==1.2.0
 littleutils==0.2.2
+llvmlite==0.35.0
 lxml==4.5.2
 MarkupSafe==1.1.1
 matplotlib==3.3.1
@@ -50,6 +51,7 @@ networkx==2.5
 nibabel==3.1.1
 nilearn==0.6.2
 notebook==6.1.3
+numba==0.52.0
 numpy==1.19.1
 outdated==0.2.0
 packaging==20.4
@@ -85,8 +87,10 @@ scikit-learn==0.23.2
 scipy==1.5.2
 seaborn==0.10.1
 Send2Trash==1.5.0
+shap==0.37.0
 six==1.15.0
 sklearn==0.0
+slicer==0.0.3
 statsmodels==0.12.0
 tabulate==0.8.7
 terminado==0.8.3
